Fixed some layout issues for 404 page

--- a/web/app/themes/maartendekker/assets/styles/common/_layout.less
+++ b/web/app/themes/maartendekker/assets/styles/common/_layout.less
@@ -114,6 +114,10 @@ body {
 	border-color: #00f;
 }
 
+.error404 .content {
+	border-color: #f00;
+}
+
 .cf:after {
     content:"";
     display:table;
